--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
       crossorigin=""/>
-    <title>George Hub</title>
+    <title>%REACT_APP_WEBSITE_NAME%</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -48,7 +48,7 @@
     </script>
     <script type="text/javascript">
       (function(){
-        emailjs.init("{EMAILJS_PUB_KEY}");
+        emailjs.init("%REACT_APP_EMAILJS_PUB_KEY%");
       })();
     </script>
   </body>
